--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                        <div><span>Type</span><span>App</span></div>
                                        <div><span>Client</span><span>Business</span></div>
                                     </div>
-                                    <p>Excepteur sint occaecat cupidatat non proidento in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                    <p>Excepteur sint occaecat cupidatat non proidento.</p>
                                  </div>
                               </div>
                            </div>
