--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
          </section>
 
 
-         <section  class="section-base" style=" ">
+         <section id="team"  class="section-base" style=" ">
             <div class="container pt-0" >
                <div class="row " >
                   <div class='col-lg-3 col-md-3 col-sm-3  '>
