--- a/index.html
+++ b/index.html
@@ -195,7 +195,11 @@
                               <h2>Our values and goals</h2>
                               <p>About us</p>
                            </div>
-                           <p>Tax products are designed to take the pain out of tedious income tax work. File IT tax returns Online effortlessly or invest into intelligent tax savings options in minutes. 100% online, zero paperwork!</p>
+                           <p>We are a Hyderabad based firm with highly qualified and trained professionals providing one-stop services for Income tax filings, GST, Management and Advisory services, Book-keeping, Direct Tax matters and other related services
+tax products are designed to take the pain out of tedious income tax work. File income tax returns Online effortlessly or invest into intelligent tax savings options in minutes. 100% online, zero paperwork!
+You can take our expert tax advice both online and offline. To save money and time, I would personally recommend you online consultation through a trusted website. If you are in India, the best way to consult online is through _______.com which is the best platform to take tax advice from leading tax advisers and consultations.
+Company has a large community of professionals, tax planners, and financial advisors. You can instantly connect with these experts through chat and email to discuss your queries related to tax saving, income tax return filings, GST return, Accounting, investment and much more
+</p>
                            <div class="box-sign"><img src="https://chipblue.net/joomla/execoore/images/sign-dark.png?1561622743298" alt="sign" data-mce-src="images/sign-dark.html"> <b>Albert Patterson</b> <span>Founder &amp; CEO</span></div>
                         </div>
                      </div>
