--- a/index.html
+++ b/index.html
@@ -84,10 +84,7 @@
                         <a class="" href="#service">services</a>
 
                      </li>
-                     <li class="item-127   dropdown">
-                        <a class="" href="#team">Team</a>
-
-                     </li>
+                  
                      <li class="item-127   dropdown">
                         <a class="" href="#client">client</a>
 
@@ -226,7 +223,7 @@ Company has a large community of professionals, tax planners, and financial advi
                               <div class="cnt-box cnt-box-info boxed" data-href="#">
                                  <a class="img-box" href="#" data-mce-href="#"><img src="https://chipblue.net/joomla/execoore/images/image-17.jpg?1561622495312" alt="" data-mce-src="images/image-17.html"></a>
                                  <div class="caption">
-                                    <h2>IT &amp; GST Return</h2>
+                                    <h2>Direct Taxation</h2>
                                     <div class="cnt-info">
                                        <div><span>Price</span><span>$Free</span></div>
                                        <div><span>Type</span><span>Software</span></div>
@@ -240,11 +237,15 @@ Company has a large community of professionals, tax planners, and financial advi
                               <div class="cnt-box cnt-box-info boxed" data-href="#">
                                  <a class="img-box" href="#" data-mce-href="#"><img src="https://chipblue.net/joomla/execoore/images/image-16.jpg?1561622495312" alt="" data-mce-src="images/image-16.html"></a>
                                  <div class="caption">
-                                    <h2>MSME Reg</h2>
-                                    <div class="cnt-info">
-                                       <div><span>Price</span><span>$Free</span></div>
-                                       <div><span>Type</span><span>App</span></div>
-                                       <div><span>Client</span><span>Private</span></div>
+                                    <h2>Corporate/Non-Corporate </h2>
+                                    <div class="custom mt-30"  >
+                                       <ul class="icon-list icon-line">
+                                          <li><span>Tax Planning</span></li>
+                                          <li><span>Tax Advice</span></li>
+                                          <li><span>Tax Filings</span></li>
+                                          <li><span>Bulk Filing of Salaried Returns</span></li>
+                                          <li><span>Other Related Matter</span></li>
+                                       </ul>
                                     </div>
                                     <p>Excepteur sint occaecat cupidatat non proidento in culpa qui officia deserunt mollit anim id est laborum.</p>
                                  </div>
@@ -254,7 +255,7 @@ Company has a large community of professionals, tax planners, and financial advi
                               <div class="cnt-box cnt-box-info boxed" data-href="#">
                                  <a class="img-box" href="#" data-mce-href="#"><img src="https://chipblue.net/joomla/execoore/images/image-9.jpg?1561622495312" alt="" data-mce-src="images/image-9.html"></a>
                                  <div class="caption">
-                                    <h2>MCA Compliance and Secretarial Work</h2>
+                                    <h2>GST</h2>
                                     <div class="cnt-info">
                                        <div><span>Price</span><span>$Free</span></div>
                                        <div><span>Type</span><span>App</span></div>
@@ -268,14 +269,15 @@ Company has a large community of professionals, tax planners, and financial advi
                               <div class="cnt-box cnt-box-info boxed" data-href="#">
                                  <a class="img-box" href="#" data-mce-href="#"><img src="https://chipblue.net/joomla/execoore/images/image-5.jpg?1561622495312" alt="" data-mce-src="images/image-5.html"></a>
                                  <div class="caption">
-                                    <h2>HR Related Documents</h2>
-                                    <div class="cnt-info">
-                                       <div><span>Price</span><span>$Free</span></div>
-                                       <div><span>Type</span><span>Saas</span></div>
-                                       <div><span>Client</span><span>Business</span></div>
+                                    <h2>SEIS/MEIS</h2>
+                                    <div class="custom mt-30"  >
+                                       <ul class="icon-list icon-line">
+                                          <li><span>Incorporation of a Company</span></li>
+                                          <li><span>Annual Compliances</span></li>
+                                          <li><span>Appointment &amp; Removal of Directors</span></li>
+                                          <li><span>Other Related Services</span></li>
+                                       </ul>
                                     </div>
-                                    <p>Excepteur sint occaecat cupidatat non proidento in culpa qui officia deserunt mollit anim id est laborum.</p>
-                                 </div>
                               </div>
                            </div>
                            <div class="grid-item">
@@ -283,14 +285,28 @@ Company has a large community of professionals, tax planners, and financial advi
                                  <div class="extra-field">30% discount today</div>
                                  <a class="img-box" href="#" data-mce-href="#"><img src="https://chipblue.net/joomla/execoore/images/image-11.jpg?1561622495312" alt="" data-mce-src="images/image-11.html"></a>
                                  <div class="caption">
-                                    <h2>PF ESIC PT Return</h2>
-                                    <div class="cnt-info">
-                                       <div><span>Price</span><span>$Free</span></div>
-                                       <div><span>Type</span><span>Software</span></div>
-                                       <div><span>Client</span><span>Business</span></div>
+                                    <h2>Accounting Services</h2>
+                                    <div class="custom mt-30"  >
+                                       <ul class="icon-list icon-line">
+                                          <li><span>Tally ERP 9</span></li>
+                                          <li><span>Quick Books</span></li>
+                                          <li><span>Design, Implementation and Review of Accounting</span></li>
+                                       </ul>
                                     </div>
-                                    <p>Excepteur sint occaecat cupidatat non proidento in culpa qui officia deserunt mollit anim id est laborum.</p>
-                                 </div>
+                              </div>
+                           </div>
+                           <div class="grid-item">
+                              <div class="cnt-box cnt-box-info boxed" data-href="#">
+                                 <div class="extra-field">30% discount today</div>
+                                 <a class="img-box" href="#" data-mce-href="#"><img src="https://chipblue.net/joomla/execoore/images/image-11.jpg?1561622495312" alt="" data-mce-src="images/image-11.html"></a>
+                                 <div class="caption">
+                                    <h2>Manuals</h2>
+                                    <div class="custom mt-30"  >
+                                       <ul class="icon-list icon-line">
+                                          <li><span>Establishment and Review of Accounting System</span></li>
+                                          <li><span>Maintenance of Accounting Books and Records</span></li>
+                                       </ul>
+                                    </div>
                               </div>
                            </div>
                            <div class="grid-item">
@@ -298,66 +314,15 @@ Company has a large community of professionals, tax planners, and financial advi
                                  <div class="extra-field">30% discount today</div>
                                  <a class="img-box" href="#" data-mce-href="#"><img src="https://chipblue.net/joomla/execoore/images/image-12.jpg?1561622495312" alt="" data-mce-src="images/image-12.html"></a>
                                  <div class="caption">
-                                    <h2>TDS Compliance</h2>
-                                    <div class="cnt-info">
-                                       <div><span>Price</span><span>$Free</span></div>
-                                       <div><span>Type</span><span>Consulting</span></div>
-                                       <div><span>Client</span><span>Business</span></div>
+                                    <h2>HR &amp; Related Statutory Compliance</h2>
+                                    <div class="custom mt-30"  >
+                                       <ul class="icon-list icon-line">
+                                          <li><span>PF</span></li>
+                                          <li><span>PT</span></li>
+                                          <li><span>ESI</span></li>
+                                          <li><span>TDS</span></li>
+                                       </ul>
                                     </div>
-                                    <p>Excepteur sint occaecat cupidatat non proidento in culpa qui officia deserunt mollit anim id est laborum.</p>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </section>
-
-
-         <section id="team"  class="section-base" style=" ">
-            <div class="container pt-0" >
-               <div class="row " >
-                  <div class='col-lg-3 col-md-3 col-sm-3  '>
-                     <div class="title">
-                        <h2>The big family</h2>
-                        <p>Our team</p>
-                     </div>
-                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elitsed do eiusmod tempor incididu.</p>
-                     <p><a class="btn-text active" href="#" data-mce-href="#">View the team</a></p>
-                  </div>
-                  <div class='col-lg-9 col-md-9 col-sm-9  '>
-                     <div class="grid-list" data-columns="3" data-columns-sm="2" data-columns-xs="1">
-                        <div class="grid-box">
-                           <div class="grid-item">
-                              <div class="cnt-box cnt-box-team">
-                                 <img src="https://chipblue.net/joomla/execoore/images/user-1.jpg?1561625550812" alt="" data-mce-src="images/user-1.html">
-                                 <div class="caption">
-                                    <h2>Frank De Vinci</h2>
-                                    <span>Marketing</span> <span class="icon-links"> <a href="#" target="_blank" data-mce-href="#"><i class="icon-facebook">&nbsp;</i></a> <a href="#" target="_blank" data-mce-href="#"><i class="icon-twitter">&nbsp;</i></a> <a href="#" target="_blank" data-mce-href="#"><i class="icon-instagram">&nbsp;</i></a> </span>
-                                    <p>Lorem ipsum dolor sitamet consectetur eiusmo.</p>
-                                 </div>
-                              </div>
-                           </div>
-                           <div class="grid-item">
-                              <div class="cnt-box cnt-box-team ">
-                                 <img src="https://chipblue.net/joomla/execoore/images/user-9.jpg?1561625550812" alt="" data-mce-src="images/user-9.html">
-                                 <div class="caption">
-                                    <h2>Donald Cort</h2>
-                                    <span>Social media</span> <span class="icon-links"> <a href="#" target="_blank" data-mce-href="#"><i class="icon-facebook">&nbsp;</i></a> <a href="#" target="_blank" data-mce-href="#"><i class="icon-twitter">&nbsp;</i></a> <a href="#" target="_blank" data-mce-href="#"><i class="icon-instagram">&nbsp;</i></a> </span>
-                                    <p>Lorem ipsum dolor sitamet consectetur eiusmo.</p>
-                                 </div>
-                              </div>
-                           </div>
-                           <div class="grid-item">
-                              <div class="cnt-box cnt-box-team">
-                                 <img src="https://chipblue.net/joomla/execoore/images/user-3.jpg?1561625550812" alt="" data-mce-src="images/user-3.html">
-                                 <div class="caption">
-                                    <h2>Alicia Sandre</h2>
-                                    <span>Engeneer</span> <span class="icon-links"> <a href="#" target="_blank" data-mce-href="#"><i class="icon-facebook">&nbsp;</i></a> <a href="#" target="_blank" data-mce-href="#"><i class="icon-twitter">&nbsp;</i></a> <a href="#" target="_blank" data-mce-href="#"><i class="icon-instagram">&nbsp;</i></a> </span>
-                                    <p>Lorem ipsum dolor sitamet consectetur eiusmo.</p>
-                                 </div>
                               </div>
                            </div>
                         </div>
@@ -491,7 +456,7 @@ Company has a large community of professionals, tax planners, and financial advi
                         </li>
                         <li class="">
                            <a data-toggle="collapse" data-parent=".accordion-slider" href="#collapse3103621872" aria-expanded="false" aria-controls="collapse3103621872">
-                           For CA &amp; Experts			</a>
+                           For Consultant			</a>
                            <div class="content ">
                               <p>Lorem ipsum dolor sit amet consectetur adipiscing elitsed do eiusmod tempor incididunt utlabore et dolore magna aliqua. Utenim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                            </div>
