--- a/index.html
+++ b/index.html
@@ -244,25 +244,11 @@ Company has a large community of professionals, tax planners, and financial advi
                                        <div><span>Type</span><span>App</span></div>
                                        <div><span>Client</span><span>Business</span></div>
                                     </div>
-                                    <p>Excepteur sint occaecat cupidatat non proidento.</p>
+                                    <p>Excepteur sint occaecat cupidatat non proidento sint occaecat cupidatat.</p>
                                  </div>
                               </div>
                            </div>
-                           <div class="grid-item">
-                              <div class="cnt-box cnt-box-info boxed" data-href="#">
-                                 <a class="img-box" href="#" data-mce-href="#"><img src="https://chipblue.net/joomla/execoore/images/image-5.jpg?1561622495312" alt="" data-mce-src="images/image-5.html"></a>
-                                 <div class="caption">
-                                    <h2>SEIS/MEIS</h2>
-                                    <div class="custom mt-30"  >
-                                       <ul class="icon-list icon-line">
-                                          <li><span>Incorporation of a Company</span></li>
-                                          <li><span>Annual Compliances</span></li>
-                                          <li><span>Appointment &amp; Removal of Directors</span></li>
-                                          <li><span>Other Related Services</span></li>
-                                       </ul>
-                                    </div>
-                              </div>
-                           </div>
+                          
                            <div class="grid-item">
                               <div class="cnt-box cnt-box-info boxed" data-href="#">
                                  <div class="extra-field">30% discount today</div>
@@ -310,6 +296,21 @@ Company has a large community of professionals, tax planners, and financial advi
                            </div>
                            <div class="grid-item">
                               <div class="cnt-box cnt-box-info boxed" data-href="#">
+                                 <a class="img-box" href="#" data-mce-href="#"><img src="https://chipblue.net/joomla/execoore/images/image-5.jpg?1561622495312" alt="" data-mce-src="images/image-5.html"></a>
+                                 <div class="caption">
+                                    <h2>SEIS/MEIS</h2>
+                                    <div class="custom mt-30"  >
+                                       <ul class="icon-list icon-line">
+                                          <li><span>Incorporation of a Company</span></li>
+                                          <li><span>Annual Compliances</span></li>
+                                          <li><span>Appointment &amp; Removal of Directors</span></li>
+                                          <li><span>Other Related Services</span></li>
+                                       </ul>
+                                    </div>
+                              </div>
+                           </div>
+                           <div class="grid-item">
+                              <div class="cnt-box cnt-box-info boxed" data-href="#">
                                  <a class="img-box" href="#" data-mce-href="#"><img src="https://chipblue.net/joomla/execoore/images/image-16.jpg?1561622495312" alt="" data-mce-src="images/image-16.html"></a>
                                  <div class="caption">
                                     <h2>Corporate/Non-Corporate </h2>
@@ -322,7 +323,6 @@ Company has a large community of professionals, tax planners, and financial advi
                                           <li><span>Other Related Matter</span></li>
                                        </ul>
                                     </div>
-                                    <p>Excepteur sint occaecat cupidatat non proidento in culpa qui officia deserunt mollit anim id est laborum.</p>
                                  </div>
                               </div>
                            </div>
