--- a/index.html
+++ b/index.html
@@ -264,6 +264,8 @@ Company has a large community of professionals, tax planners, and financial advi
                                     </div>
                               </div>
                            </div>
+                           <hr class="space">
+
                            <div class="grid-item">
                               <div class="cnt-box cnt-box-info boxed" data-href="#">
                                  <div class="extra-field">30% discount today</div>
@@ -309,6 +311,8 @@ Company has a large community of professionals, tax planners, and financial advi
                                     </div>
                               </div>
                            </div>
+                           <hr class="space">
+
                            <div class="grid-item">
                               <div class="cnt-box cnt-box-info boxed" data-href="#">
                                  <a class="img-box" href="#" data-mce-href="#"><img src="https://chipblue.net/joomla/execoore/images/image-16.jpg?1561622495312" alt="" data-mce-src="images/image-16.html"></a>
