--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                      <div class="row row-fit-lg pt-100" data-anima="fade-bottom" data-time="1000">
                         <div class="col-lg-6">
                            <ul class="slider" data-options="arrows:true,nav:false">
-                              <li><a class="img-box img-box-caption btn-video lightbox" href="../../../../../www.youtube.com/watch5e88.html?v=Lb4IcGF5iTQ" data-lightbox-anima="fade-top" data-mce-href="../../../../../www.youtube.com/watch5e88.html?v=Lb4IcGF5iTQ"> <img style="height: 630px;" src="https://chipblue.net/joomla/execoore/images/image-3.jpg?1561622743298" alt="" data-mce-src="images/image-3.html"> <span>Albert Patterson</span> </a></li>
+                              <li><a class="img-box img-box-caption btn-video lightbox" href="#" data-lightbox-anima="fade-top" data-mce-href="#"> <img style="height: 630px;" src="https://chipblue.net/joomla/execoore/images/image-3.jpg?1561622743298" alt="" data-mce-src="#"> <span>Albert Patterson</span> </a></li>
                               <li><a class="img-box img-box-caption lightbox" href="https://chipblue.net/joomla/execoore/images/image-16.jpg" data-lightbox-anima="fade-top" data-mce-href="images/image-16.html"> <img style="height: 630px;" src="https://chipblue.net/joomla/execoore/images/image-16.jpg?1561622743298" alt="" data-mce-src="images/image-16.html"> <span>Security team</span> </a></li>
                            </ul>
                         </div>
