--- a/index.html
+++ b/index.html
@@ -179,8 +179,7 @@
                      <div class="row row-fit-lg pt-100" data-anima="fade-bottom" data-time="1000">
                         <div class="col-lg-6">
                            <ul class="slider" data-options="arrows:true,nav:false">
-                              <li><a class="img-box img-box-caption btn-video lightbox" href="#" data-lightbox-anima="fade-top" data-mce-href="#"> <img style="height: 630px;" src="https://chipblue.net/joomla/execoore/images/image-3.jpg?1561622743298" alt="" data-mce-src="#"> <span>Albert Patterson</span> </a></li>
-                              <li><a class="img-box img-box-caption lightbox" href="https://chipblue.net/joomla/execoore/images/image-16.jpg" data-lightbox-anima="fade-top" data-mce-href="images/image-16.html"> <img style="height: 630px;" src="https://chipblue.net/joomla/execoore/images/image-16.jpg?1561622743298" alt="" data-mce-src="images/image-16.html"> <span>Security team</span> </a></li>
+                              <li><a class="img-box img-box-caption btn-video lightbox" href="#" data-lightbox-anima="fade-top" data-mce-href="#"> <img style="height: 500px;" src="https://chipblue.net/joomla/execoore/images/image-3.jpg?1561622743298" alt="" data-mce-src="#"> </a></li>
                            </ul>
                         </div>
                         <div class="col-lg-6">
@@ -195,7 +194,6 @@ Tax products are designed to take the pain out of tedious income tax work. File 
 You can take our expert tax advice both online and offline. To save money and time, I would personally recommend you online consultation through a trusted website. If you are in India, the best way to consult online is through _______.com which is the best platform to take tax advice from leading tax advisers and consultations.
 Company has a large community of professionals, tax planners, and financial advisors. You can instantly connect with these experts through chat and email to discuss your queries related to tax saving, income tax return filings, GST return, Accounting, investment and much more
 </p>
-                           <div class="box-sign"><img src="https://chipblue.net/joomla/execoore/images/sign-dark.png?1561622743298" alt="sign" data-mce-src="images/sign-dark.html"> <b>Albert Patterson</b> <span>Founder &amp; CEO</span></div>
                         </div>
                      </div>
                   </div>
