--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <link rel="stylesheet" href="css/style.css">
       <link rel="stylesheet" href="css/custom.css">
       <link rel="stylesheet" href="css/skin.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
       <link href="https://chipblue.net/joomla/execoore/index.php/it/" rel="alternate" hreflang="it-IT" />
       <link href="index.html" rel="alternate" hreflang="en" />
@@ -39,6 +41,8 @@
       <script src="https://chipblue.net/joomla/execoore/media/k2/assets/js/k2.frontend.js?v=2.9.0&amp;sitepath=/joomla/execoore/" type="text/javascript"></script>
       <script src="https://chipblue.net/joomla/execoore/plugins/system/bluetheme/assets/js/form-validation.js" type="text/javascript"></script>
       <link href="index.html" rel="alternate" hreflang="x-default" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
       <!-- Standard Favicon-->
       <link rel="shortcut icon" href="https://chipblue.net/joomla/execoore/images/favicon.png">
       <!--LESS stylesheet for managing color presets -->
@@ -141,33 +145,33 @@
                         <div class="grid-box">
                            <div class="grid-item">
                               <div class="cnt-box cnt-box-top-icon boxed">
-                                 <i class="im-monitor-phone">&nbsp;</i>
+                                 <i class="fa fa-file-o" style="text-align: center">&nbsp;</i>
                                  <div class="caption">
-                                    <h2>Tax E-Filing</h2>
+                                    <h2 style="text-align: center">Tax E-Filing</h2>
                                  </div>
                               </div>
                            </div>
                            <div class="grid-item">
                               <div class="cnt-box cnt-box-top-icon boxed">
-                                 <i class="im-bar-chart2">&nbsp;</i>
+                                 <i class="fa fa-shield" style="text-align: center">&nbsp;</i>
                                  <div class="caption">
-                                    <h2>Trusted security</h2>
+                                    <h2 style="text-align: center">Trusted security</h2>
                                  </div>
                               </div>
                            </div>
                            <div class="grid-item">
                               <div class="cnt-box cnt-box-top-icon boxed">
-                                 <i class=" im-medal">&nbsp;</i>
+                                 <i class="fa fa-handshake-o" style="text-align: center">&nbsp;</i>
                                  <div class="caption">
-                                    <h2>Tax saving Guide</h2>
+                                    <h2 style="text-align: center">Tax saving Guide</h2>
                                  </div>
                               </div>
                            </div>
                            <div class="grid-item">
                               <div class="cnt-box cnt-box-top-icon boxed">
-                                 <i class="im-business-man">&nbsp;</i>
+                                 <i class="fa fa-tachometer" style="text-align: center">&nbsp;</i>
                                  <div class="caption">
-                                    <h2>7 Minutes &amp; Done</h2>
+                                    <h2 style="text-align: center">7 Minutes &amp; Done</h2>
                                  </div>
                               </div>
                            </div>
